Add go back button

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -105,5 +105,7 @@
                 Allow the lasagna to cool at least 15 before serving. Leftovers will keep for about 5 days. May be reheated in conventional oven or microwave. Leave aluminum tent on for storage. (Try to keep the aluminum foil from touching the sauce.)
             </li>
         </ol>
+
+        <a href="../index.html">Go back</a>
     </body>
 </html>
