--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/bolognese.html">Bolognese Sauce</a></li>            
+            <li><a href="recipes/bolognese.html">Bolognese Sauce</a></li>       
+            <li><a href="recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>     
         </ul>                        
     </body>
 </html>
