--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -75,5 +75,7 @@
 
         <p><em>Store leftover pizza in the fridge for up to three days. Reheat pizza in a sturdy skillet over medium heat with a drizzle of oil. Cover skillet with a lid and cook until the cheese has melted and crust is crispy.</em></p>
         <a href="../index.html">Go back</a>
+
+        <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/">This link</a>.</p>
     </body>
 </html>
