--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -107,5 +107,7 @@
         </ol>
 
         <a href="../index.html">Go back</a>
+
+        <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/lasagna/">This link</a>.</p>
     </body>
 </html>
