--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title-one">Odin Recipes</h1>
+        <ul class="unordered-one">
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/bolognese.html">Bolognese Sauce</a></li>       
             <li><a href="recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>     
