Add CSS to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,111 +3,116 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
-    <body>
-        <h1>Make Your Original Lasagna Today!</h1>
-        <img src="img/lasagna.jpg" alt="Lasagna" style="width: 35%;">
+    <body>        
+        <h1 class="lasagna-title">Make Your Original Lasagna Today!</h1>
+        <img src="img/lasagna.jpg" alt="Lasagna" style="width: 35%; border-radius: 15px;">
 
         <h2>Description</h2>
         <p>This classic lasagna is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family, and freezes well, too.</p>
         <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
         <p>For this recipe, we are essentially making a thick, meaty tomato sauce and layering that with noodles and cheese into a casserole.</p>
+        
+        <div class="lasagna-recipe ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <h4>For the meat sauce</h4>
+                <li>2 teaspoons extra virgin olive oil</li>
+                <li>1 pound ground beef chuck</li>
+                <li>1/2 medium onion, diced (about 3/4 cup)</li>
+                <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+                <li>2 cloves garlic, minced</li>
+                <li>1 (28-ounce)can good-quality tomato sauce</li>
+                <li>3 ounces tomato paste (half a 6-ounce can)</li>
+                <li>1 (14 ounce) can crushed tomatoes</li>
+                <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
+                <li>1/4 cup chopped fresh parsley (preferably flat leaf), packed</li>
+                <li>1 tablespoon Italian seasoning</li>
+                <li>1 pinch garlic powder and/or garlic salt</li>
+                <li>1 tablespoon red or white wine vinegar</li>
+                <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+                <li>salt</li>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <h4>For the meat sauce</h4>
-            <li>2 teaspoons extra virgin olive oil</li>
-            <li>1 pound ground beef chuck</li>
-            <li>1/2 medium onion, diced (about 3/4 cup)</li>
-            <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
-            <li>2 cloves garlic, minced</li>
-            <li>1 (28-ounce)can good-quality tomato sauce</li>
-            <li>3 ounces tomato paste (half a 6-ounce can)</li>
-            <li>1 (14 ounce) can crushed tomatoes</li>
-            <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
-            <li>1/4 cup chopped fresh parsley (preferably flat leaf), packed</li>
-            <li>1 tablespoon Italian seasoning</li>
-            <li>1 pinch garlic powder and/or garlic salt</li>
-            <li>1 tablespoon red or white wine vinegar</li>
-            <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
-            <li>salt</li>
+                <h4>To assemble the lasagna</h4>
+                <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
+                <li>15 ounces ricotta cheese</li>
+                <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
+                <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
+            </ul>
+        </div>
 
-            <h4>To assemble the lasagna</h4>
-            <li>1/2 pound dry lasagna noodles (requires 9 lasagna noodles - unbroken)</li>
-            <li>15 ounces ricotta cheese</li>
-            <li>1 1/2 pounds (24 ounces) mozzarella cheese, grated or sliced</li>
-            <li>1/4 pound (4 ounces) freshly grated Parmesan cheese</li>
-        </ul>
+        <div class="lasagna-recipe steps">
+            <h3>Steps</h3>
+            <ol>
+                <li>
+                    <h4 style="margin-bottom:0;">Put pasta water on to boil</h4>
+                    Put a large pot of salted water (1 Tbsp salt for every 2 quarts of water) on the stovetop on high heat. It can take a while for a large pot of water to come to a boil (this will be your pasta water), so prepare the sauce in the next steps while the water is heating.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Brown the ground beef</h4>
+                    In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it is lightly browned on all sides.
+                    <br>
+                    Remove the beef with a slotted spoon to a bowl. Drain off all but a tablespoon of fat.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Cook the bell pepper, onions, garlic, add back the beef</h4>
+                    Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red onions).
+                    <br>    
+                    Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced garlic and cook half a minute more.
+                    <br>    
+                    Return the browned ground beef to the pan. Stir to combine, reduce the heat to low and cook for another 5 minutes.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</h4>
+                    Transfer the beef mixture to a medium sized (3- to 4-quart) pot. Add the crushed tomatoes, tomato sauce, and tomato paste to the pot.
+                    <br>
+                    Add the parsley, oregano, and Italian seasonings, adjusting the amounts to taste. Sprinkle with garlic powder and/or garlic salt, to taste.
+                    Sprinkle with red or white wine vinegar. Stir in sugar, a tablespoon at a time, tasting after each addition, to taste. (The amount of sugar needed will vary, depending on how acidic the tomatoes are that you are using.)
+                    <br>
+                    Add salt to taste, and note that you will later be adding Parmesan, which is salty.
+                    <br>
+                    Bring the sauce to a simmer and then lower the heat to maintain a low simmer. Cook for 15 to 45 minutes, stirring often. Scrape the bottom of the pot every so often so nothing sticks to the bottom and scorches.
+                    <br>
+                    Remove from heat.   
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Boil and drain the lasagna noodles</h4>
+                    By now the salted water you started heating in step one should be boiling. Add the dry lasagna noodles and cook them to al dente, per package directions. (Note noodles may be cooked in advance.)
+                    <br>
+                    Stir often to prevent from sticking. Make sure that water remains at a full rolling boil during the entire cooking to prevent noodles from sticking.
+                    <br>
+                    When ready, drain in a colander and rinse with cool water, gently separating any noodles that may be sticking together.
+                    <br>
+                    Spread a little olive oil on a large rimmed baking sheet, and lay out the cooked noodles on this sheet, turning them over so that they get coated with a little of the olive oil. This will prevent them from sticking together.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Heat the oven to 375°F</h4>
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Assemble the lasagna</h4>
+                    In a 9x13-inch casserole or lasagna dish, ladle a cup of sauce and spread it over the bottom of the dish. Arrange one layer of lasagna noodles lengthwise (about 3 long noodles, edge may overlap, depending on your pan) over the sauce. Ladle a third of the remaining sauce over the noodles.
+                    <br>
+                    Sprinkle a layer of a third of the grated mozzarella on top of lasagna sauce. Add half of the ricotta cheese, by placing cheese dollops every couple inches. Sprinkle half the grated parmesan cheese evenly over the top of ricotta cheese.
+                    <br>
+                    Apply second layer of noodles, top it with half of the remaining sauce. Add half of the remaining Mozzarella, the remaining ricotta cheese, and another the remaining Parmesan.
+                    <br>
+                    Finish with another layer of noodles. Spread the remaining sauce over the top layer of noodles and sprinkle with the remaining Mozzarella cheese.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Bake</h4>
+                    Cover the lasagna pan with aluminum foil, tented slightly so it doesn't touch the noodles or sauce). Bake at 375°F for 45 minutes. Uncover in the last 10 minutes if you'd like more of a crusty top or edges.
+                </li>
+                <li>
+                    <h4 style="margin-bottom:0;">Cool and serve</h4>
+                    Allow the lasagna to cool at least 15 before serving. Leftovers will keep for about 5 days. May be reheated in conventional oven or microwave. Leave aluminum tent on for storage. (Try to keep the aluminum foil from touching the sauce.)
+                </li>
+            </ol>
+        </div>
 
-        <h3>Steps</h3>
-        <ol>
-            <li>
-                <h4 style="margin-bottom:0;">Put pasta water on to boil</h4>
-                Put a large pot of salted water (1 Tbsp salt for every 2 quarts of water) on the stovetop on high heat. It can take a while for a large pot of water to come to a boil (this will be your pasta water), so prepare the sauce in the next steps while the water is heating.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Brown the ground beef</h4>
-                In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it is lightly browned on all sides.
-                <br>
-                Remove the beef with a slotted spoon to a bowl. Drain off all but a tablespoon of fat.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Cook the bell pepper, onions, garlic, add back the beef</h4>
-                Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red onions).
-                <br>    
-                Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced garlic and cook half a minute more.
-                <br>    
-                Return the browned ground beef to the pan. Stir to combine, reduce the heat to low and cook for another 5 minutes.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</h4>
-                Transfer the beef mixture to a medium sized (3- to 4-quart) pot. Add the crushed tomatoes, tomato sauce, and tomato paste to the pot.
-                <br>
-                Add the parsley, oregano, and Italian seasonings, adjusting the amounts to taste. Sprinkle with garlic powder and/or garlic salt, to taste.
-                Sprinkle with red or white wine vinegar. Stir in sugar, a tablespoon at a time, tasting after each addition, to taste. (The amount of sugar needed will vary, depending on how acidic the tomatoes are that you are using.)
-                <br>
-                Add salt to taste, and note that you will later be adding Parmesan, which is salty.
-                <br>
-                Bring the sauce to a simmer and then lower the heat to maintain a low simmer. Cook for 15 to 45 minutes, stirring often. Scrape the bottom of the pot every so often so nothing sticks to the bottom and scorches.
-                <br>
-                Remove from heat.   
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Boil and drain the lasagna noodles</h4>
-                By now the salted water you started heating in step one should be boiling. Add the dry lasagna noodles and cook them to al dente, per package directions. (Note noodles may be cooked in advance.)
-                <br>
-                Stir often to prevent from sticking. Make sure that water remains at a full rolling boil during the entire cooking to prevent noodles from sticking.
-                <br>
-                When ready, drain in a colander and rinse with cool water, gently separating any noodles that may be sticking together.
-                <br>
-                Spread a little olive oil on a large rimmed baking sheet, and lay out the cooked noodles on this sheet, turning them over so that they get coated with a little of the olive oil. This will prevent them from sticking together.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Heat the oven to 375°F</h4>
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Assemble the lasagna</h4>
-                In a 9x13-inch casserole or lasagna dish, ladle a cup of sauce and spread it over the bottom of the dish. Arrange one layer of lasagna noodles lengthwise (about 3 long noodles, edge may overlap, depending on your pan) over the sauce. Ladle a third of the remaining sauce over the noodles.
-                <br>
-                Sprinkle a layer of a third of the grated mozzarella on top of lasagna sauce. Add half of the ricotta cheese, by placing cheese dollops every couple inches. Sprinkle half the grated parmesan cheese evenly over the top of ricotta cheese.
-                <br>
-                Apply second layer of noodles, top it with half of the remaining sauce. Add half of the remaining Mozzarella, the remaining ricotta cheese, and another the remaining Parmesan.
-                <br>
-                Finish with another layer of noodles. Spread the remaining sauce over the top layer of noodles and sprinkle with the remaining Mozzarella cheese.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Bake</h4>
-                Cover the lasagna pan with aluminum foil, tented slightly so it doesn't touch the noodles or sauce). Bake at 375°F for 45 minutes. Uncover in the last 10 minutes if you'd like more of a crusty top or edges.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Cool and serve</h4>
-                Allow the lasagna to cool at least 15 before serving. Leftovers will keep for about 5 days. May be reheated in conventional oven or microwave. Leave aluminum tent on for storage. (Try to keep the aluminum foil from touching the sauce.)
-            </li>
-        </ol>
+        <a class="go-back-button" href="../index.html">Go back</a>
 
-        <a href="../index.html">Go back</a>
-
-        <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/lasagna/">This link</a>.</p>
+        <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/lasagna/">This link</a>.</p>        
     </body>
 </html>
