Add CSS to bolognese recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,23 @@
         <meta charset="UTF-8">
         <title>Lasagna</title>
         <link rel="stylesheet" href="../style.css">
+        <style>
+            .lasagna-recipe {
+            margin-top: 50px; margin-bottom: 50px;
+            padding: 25px;
+            background-color: rgb(255, 255, 179);
+            border-radius: 15px;
+            width: fit-content;
+            }
+
+            .lasagna-recipe.steps {
+            background-color: azure;
+            }
+        </style>
     </head>
 
     <body>        
-        <h1 class="lasagna-title">Make Your Original Lasagna Today!</h1>
+        <h1 class="recipe-title">Make Your Original Lasagna Today!</h1>
         <img src="img/lasagna.jpg" alt="Lasagna" style="width: 35%; border-radius: 15px;">
 
         <h2>Description</h2>
@@ -47,17 +60,17 @@
             <h3>Steps</h3>
             <ol>
                 <li>
-                    <h4 style="margin-bottom:0;">Put pasta water on to boil</h4>
+                    <h4 class="list-h4">Put pasta water on to boil</h4>
                     Put a large pot of salted water (1 Tbsp salt for every 2 quarts of water) on the stovetop on high heat. It can take a while for a large pot of water to come to a boil (this will be your pasta water), so prepare the sauce in the next steps while the water is heating.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Brown the ground beef</h4>
+                    <h4 class="list-h4">Brown the ground beef</h4>
                     In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it is lightly browned on all sides.
                     <br>
                     Remove the beef with a slotted spoon to a bowl. Drain off all but a tablespoon of fat.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Cook the bell pepper, onions, garlic, add back the beef</h4>
+                    <h4 class="list-h4">Cook the bell pepper, onions, garlic, add back the beef</h4>
                     Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red onions).
                     <br>    
                     Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced garlic and cook half a minute more.
@@ -65,7 +78,7 @@
                     Return the browned ground beef to the pan. Stir to combine, reduce the heat to low and cook for another 5 minutes.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</h4>
+                    <h4 class="list-h4">Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</h4>
                     Transfer the beef mixture to a medium sized (3- to 4-quart) pot. Add the crushed tomatoes, tomato sauce, and tomato paste to the pot.
                     <br>
                     Add the parsley, oregano, and Italian seasonings, adjusting the amounts to taste. Sprinkle with garlic powder and/or garlic salt, to taste.
@@ -78,7 +91,7 @@
                     Remove from heat.   
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Boil and drain the lasagna noodles</h4>
+                    <h4 class="list-h4">Boil and drain the lasagna noodles</h4>
                     By now the salted water you started heating in step one should be boiling. Add the dry lasagna noodles and cook them to al dente, per package directions. (Note noodles may be cooked in advance.)
                     <br>
                     Stir often to prevent from sticking. Make sure that water remains at a full rolling boil during the entire cooking to prevent noodles from sticking.
@@ -88,10 +101,10 @@
                     Spread a little olive oil on a large rimmed baking sheet, and lay out the cooked noodles on this sheet, turning them over so that they get coated with a little of the olive oil. This will prevent them from sticking together.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Heat the oven to 375°F</h4>
+                    <h4 class="list-h4">Heat the oven to 375°F</h4>
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Assemble the lasagna</h4>
+                    <h4 class="list-h4">Assemble the lasagna</h4>
                     In a 9x13-inch casserole or lasagna dish, ladle a cup of sauce and spread it over the bottom of the dish. Arrange one layer of lasagna noodles lengthwise (about 3 long noodles, edge may overlap, depending on your pan) over the sauce. Ladle a third of the remaining sauce over the noodles.
                     <br>
                     Sprinkle a layer of a third of the grated mozzarella on top of lasagna sauce. Add half of the ricotta cheese, by placing cheese dollops every couple inches. Sprinkle half the grated parmesan cheese evenly over the top of ricotta cheese.
@@ -101,11 +114,11 @@
                     Finish with another layer of noodles. Spread the remaining sauce over the top layer of noodles and sprinkle with the remaining Mozzarella cheese.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Bake</h4>
+                    <h4 class="list-h4">Bake</h4>
                     Cover the lasagna pan with aluminum foil, tented slightly so it doesn't touch the noodles or sauce). Bake at 375°F for 45 minutes. Uncover in the last 10 minutes if you'd like more of a crusty top or edges.
                 </li>
                 <li>
-                    <h4 style="margin-bottom:0;">Cool and serve</h4>
+                    <h4 class="list-h4">Cool and serve</h4>
                     Allow the lasagna to cool at least 15 before serving. Leftovers will keep for about 5 days. May be reheated in conventional oven or microwave. Leave aluminum tent on for storage. (Try to keep the aluminum foil from touching the sauce.)
                 </li>
             </ol>
