--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -3,67 +3,85 @@
     <head>
         <meta charset="UTF-8">
         <title>Bolognese Sauce</title>
+        <link rel="stylesheet" href="../style.css">
+        <style>
+            .bolognese-recipe {
+            margin-top: 50px; margin-bottom: 50px;
+            padding: 25px;
+            background-color: rgb(255, 255, 179);
+            border-radius: 15px;
+            width: fit-content;
+            }
+
+            .bolognese-recipe.steps {
+            background-color: azure;
+            }
+        </style>
     </head>
     
     <body>
-        <h1>A Delicious Bolognese Sauce</h1>
-        <img src="img/bolognese.jpg" alt="Bolognese Sauce" style="width:35%">
+        <h1 class="recipe-title">A Delicious Bolognese Sauce</h1>
+        <img src="img/bolognese.jpg" alt="Bolognese Sauce" style="width:35%; border-radius: 15px;">
 
         <h2>Description</h2>
         <p>This classic Italian sauce simmers for hours to develop maximum flavor. Made with a blend of ground beef, pork, and Italian sausage, it's great with fresh pasta.</p>
         <p>Slow cooked for at least a couple of hours, the sauce is deep, rich, flavorful, and worth the extra effort!</p>
+        
+        <div class="bolognese-recipe ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>2 ounces pancetta, finely chopped</li>
+                <li>1 medium Spanish onion or yellow onion, finely chopped</li>
+                <li>1 celery rib, finely chopped</li>
+                <li>1 carrot, finely chopped</li>
+                <li>3 tablespoons unsalted butter</li>
+                <li>12 ounces ground beef</li>
+                <li>4 ounces ground pork</li>
+                <li>4 ounces Italian sausage, casings removed, if needed</li>
+                <li>Dash ground cloves</li>
+                <li>Dash ground cinnamon</li>
+                <li>1 teaspoon freshly ground black pepper</li>
+                <li>2 pounds peeled and chopped tomatoes (or one 28-ounce can whole peeled tomatoes, packed in water)</li>
+                <li>1 cup whole milk</li>
+                <li>1/2 teaspoon sea salt</li>
+            </ul>
+        </div>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>2 ounces pancetta, finely chopped</li>
-            <li>1 medium Spanish onion or yellow onion, finely chopped</li>
-            <li>1 celery rib, finely chopped</li>
-            <li>1 carrot, finely chopped</li>
-            <li>3 tablespoons unsalted butter</li>
-            <li>12 ounces ground beef</li>
-            <li>4 ounces ground pork</li>
-            <li>4 ounces Italian sausage, casings removed, if needed</li>
-            <li>Dash ground cloves</li>
-            <li>Dash ground cinnamon</li>
-            <li>1 teaspoon freshly ground black pepper</li>
-            <li>2 pounds peeled and chopped tomatoes (or one 28-ounce can whole peeled tomatoes, packed in water)</li>
-            <li>1 cup whole milk</li>
-            <li>1/2 teaspoon sea salt</li>
-        </ul>
-
+        <div class="bolognese-recipe steps">
         <h3>Steps</h3>
-        <ol>
-            <li>
-                <h4 style="margin-bottom:0;">Make the soffritto</h4>
-                Combine pancetta, onion, celery, and carrot in sauté pan with butter and cook over medium heat until onion turns pale gold, about 10 minutes.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Add the meats</h4>
-                Add the beef, pork, and sausage to the soffritto, and cook until browned, about 5 minutes.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Add the meats</h4>
-                Sprinkle with the clove, cinnamon, and pepper.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Add the tomatoes and simmer</h4>
-                Stir in tomatoes, increase the heat to bring to a simmer and then reduce the heat back to medium. Cook over medium heat for 15 minutes. If you are using whole canned tomatoes, break them up as you add them to the sauce.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Simmer for 2 1/2 hours</h4>
-                Add milk and season with sea salt. Then turn down the heat to low, partially cover, and simmer for 2 1/2 hours. Stir at least every 20 minutes.
-                <br>
-                Whenever the sauce gets too dry and starts sticking to the pan, just add 1/4 cup of water and scrape up any browned bits from the bottom of the pan.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Simmer for 2 1/2 hours</h4>
-                Taste the sauce and adjust the seasoning as necessary.
-                <br>
-                Bolognese is traditionally served with fresh tagliatelle pasta, but you can also serve it with fettuccine, pappardelle, penne, or other pasta. Sauce freezes well for future use.
-            </li>
-        </ol>
+            <ol>
+                <li>
+                    <h4 class="list-h4">Make the soffritto</h4>
+                    Combine pancetta, onion, celery, and carrot in sauté pan with butter and cook over medium heat until onion turns pale gold, about 10 minutes.
+                </li>
+                <li>
+                    <h4 class="list-h4">Add the meats</h4>
+                    Add the beef, pork, and sausage to the soffritto, and cook until browned, about 5 minutes.
+                </li>
+                <li>
+                    <h4 class="list-h4">Add the meats</h4>
+                    Sprinkle with the clove, cinnamon, and pepper.
+                </li>
+                <li>
+                    <h4 class="list-h4">Add the tomatoes and simmer</h4>
+                    Stir in tomatoes, increase the heat to bring to a simmer and then reduce the heat back to medium. Cook over medium heat for 15 minutes. If you are using whole canned tomatoes, break them up as you add them to the sauce.
+                </li>
+                <li>
+                    <h4 class="list-h4">Simmer for 2 1/2 hours</h4>
+                    Add milk and season with sea salt. Then turn down the heat to low, partially cover, and simmer for 2 1/2 hours. Stir at least every 20 minutes.
+                    <br>
+                    Whenever the sauce gets too dry and starts sticking to the pan, just add 1/4 cup of water and scrape up any browned bits from the bottom of the pan.
+                </li>
+                <li>
+                    <h4 class="list-h4">Simmer for 2 1/2 hours</h4>
+                    Taste the sauce and adjust the seasoning as necessary.
+                    <br>
+                    Bolognese is traditionally served with fresh tagliatelle pasta, but you can also serve it with fettuccine, pappardelle, penne, or other pasta. Sauce freezes well for future use.
+                </li>
+            </ol>
+        </div>
 
-        <a href="../index.html">Go back</a>
+        <a class="go-back-button" href="../index.html">Go back</a>
 
         <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/bolognese_meat_sauce/">This link</a>.</p>
     </body>
