--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -3,78 +3,96 @@
     <head>
         <meta charset="UTF-8">
         <title>Pepperoni Pizza</title>
+        <link rel="stylesheet" href="../style.css">
+        <style>
+            .pepperoni-recipe {
+            margin-top: 50px; margin-bottom: 50px;
+            padding: 25px;
+            background-color: rgb(255, 255, 179);
+            border-radius: 15px;
+            width: fit-content;
+            }
+
+            .pepperoni-recipe.steps {
+            background-color: azure;
+            }
+        </style>
     </head>
 
     <body>
-        <h1>The Italian Pepperoni Pizza</h1>
-        <img src="img/pepperoni-pizza.jpg" alt="Pepperoni Pizza" style="width:35%;">
+        <h1 class="recipe-title">The Italian Pepperoni Pizza</h1>
+        <img src="img/pepperoni-pizza.jpg" alt="Pepperoni Pizza" style="width:35%; border-radius: 15px;">
 
         <h2>Description</h2>
         <p>This Homemade Pepperoni Pizza has everything you want—a great crust, gooey cheese, and tons of pepperoni. The secret to great pepperoni flavor? Hide extra under the cheese! Who needs delivery?</p>
         <p>On the dough: Don't get overwhelmed! If it's your first time making pizza at home, just buy the dough. You can usually find pizza dough at the grocery store, or some pizza places will sell you a one-pound ball of dough for a few bucks.</p>
+        
+        <div class="pepperoni-recipe ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>16 ounces pizza dough, store-bought or homemade, though note that this recipe makes enough dough for 2 pizzas)</li>
+                <li>1/2 cup pizza sauce (see below)</li>
+                <li>18 to 20 slices pepperoni</li>
+                <li>12 ounces mozzarella cheese, grated</li>
+                <li>1/2 teaspoon ground black pepper</li>
+                <li>1 teaspoon fresh oregano, optional</li>
+                <li>Flour for rolling and shaping dough</li>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>16 ounces pizza dough, store-bought or homemade, though note that this recipe makes enough dough for 2 pizzas)</li>
-            <li>1/2 cup pizza sauce (see below)</li>
-            <li>18 to 20 slices pepperoni</li>
-            <li>12 ounces mozzarella cheese, grated</li>
-            <li>1/2 teaspoon ground black pepper</li>
-            <li>1 teaspoon fresh oregano, optional</li>
-            <li>Flour for rolling and shaping dough</li>
+                <h4>For the Quick Pizza Sauce</h4>
+                <li>1/2 cup tomato sauce (no salt)</li>
+                <li>1/2 teaspoon kosher salt</li>
+                <li>1/2 teaspoon ground black pepper</li>
+                <li>1/2 teaspoon granulated garlic</li>
+                <li>1/2 teaspoon granulated onion</li>
+                <li>1/4 teaspoon red pepper flakes</li>
+                <li>1 teaspoon olive oil</li>
 
-            <h4>For the Quick Pizza Sauce</h4>
-            <li>1/2 cup tomato sauce (no salt)</li>
-            <li>1/2 teaspoon kosher salt</li>
-            <li>1/2 teaspoon ground black pepper</li>
-            <li>1/2 teaspoon granulated garlic</li>
-            <li>1/2 teaspoon granulated onion</li>
-            <li>1/4 teaspoon red pepper flakes</li>
-            <li>1 teaspoon olive oil</li>
+                <h4>For the Honey Butter <em>(I am italian. I am adding this ONLY because I sticked with this article I found and didn't want to change it. (But I am crying inside)</em></h4>
+                <li>1/4 cup softened butter</li>
+                <li>2 tablespoons honey</li>
+            </ul>
+        </div>
 
-            <h4>For the Honey Butter <em>(I am italian. I am adding this ONLY because I sticked with this article I found and didn't want to change it. (But I am crying inside)</em></h4>
-            <li>1/4 cup softened butter</li>
-            <li>2 tablespoons honey</li>
-        </ul>
-
-        <h2>Steps</h2>
-        <ol>
-            <li>
-                <h4 style="margin-bottom:0;">Preheat the oven</h4>
-                Preheat oven to 500°F. If you are using a pizza stone, preheat it in the oven for at least 20 minutes so it is nice and hot as well.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Make the sauce</h4>
-                If you are using my sauce recipe, stir together the ingredients. The sauce recipe makes just enough for one large pizza. You can easily double it if you are making more than one pizza.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Roll out the dough</h4>
-                Roll out dough on a lightly floured surface. If it's hard to roll, let it rest for 5 minutes so it can come to room temperature. For a large pizza, I like to roll my dough into about a 14-inch diameter circle.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Add the toppings</h4>
-                Transfer the dough to a lightly dusted pizza peel. Alternatively, fit it into a large cast-iron.
-                <br>
-                Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and the rest of the pepperoni. Season with black pepper.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Cook the pizza</h4>
-                If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6-8 minutes, or until the crust is golden brown and charred in spots.
-                <br>
-                If you're using a skillet, press the dough into a cast iron skillet and add toppings. Place the skillet over a high heat burner for 2 minutes to get it preheated and get the crust cooking right away. Then transfer to a 500 ̊F oven and bake for 10 to 12 minutes, or until the crust is golden brown.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Slice and serve</h4>
-                Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. Season with fresh oregano (optional). Serve while warm with a side salad.
-            </li>
-            <li>
-                <h4 style="margin-bottom:0;">Make the honey butter <strong>(optional)</strong></h4>
-                Stir together the softened butter and honey, then serve alongside the pizza for crust dipping.
-            </li>                        
-        </ol>
+        <div class="pepperoni-recipe steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>
+                    <h4 class="list-h4">Preheat the oven</h4>
+                    Preheat oven to 500°F. If you are using a pizza stone, preheat it in the oven for at least 20 minutes so it is nice and hot as well.
+                </li>
+                <li>
+                    <h4 class="list-h4">Make the sauce</h4>
+                    If you are using my sauce recipe, stir together the ingredients. The sauce recipe makes just enough for one large pizza. You can easily double it if you are making more than one pizza.
+                </li>
+                <li>
+                    <h4 class="list-h4">Roll out the dough</h4>
+                    Roll out dough on a lightly floured surface. If it's hard to roll, let it rest for 5 minutes so it can come to room temperature. For a large pizza, I like to roll my dough into about a 14-inch diameter circle.
+                </li>
+                <li>
+                    <h4 class="list-h4">Add the toppings</h4>
+                    Transfer the dough to a lightly dusted pizza peel. Alternatively, fit it into a large cast-iron.
+                    <br>
+                    Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and the rest of the pepperoni. Season with black pepper.
+                </li>
+                <li>
+                    <h4 class="list-h4">Cook the pizza</h4>
+                    If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6-8 minutes, or until the crust is golden brown and charred in spots.
+                    <br>
+                    If you're using a skillet, press the dough into a cast iron skillet and add toppings. Place the skillet over a high heat burner for 2 minutes to get it preheated and get the crust cooking right away. Then transfer to a 500 ̊F oven and bake for 10 to 12 minutes, or until the crust is golden brown.
+                </li>
+                <li>
+                    <h4 class="list-h4">Slice and serve</h4>
+                    Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. Season with fresh oregano (optional). Serve while warm with a side salad.
+                </li>
+                <li>
+                    <h4 class="list-h4">Make the honey butter <strong>(optional)</strong></h4>
+                    Stir together the softened butter and honey, then serve alongside the pizza for crust dipping.
+                </li>                        
+            </ol>
+        </div>
 
         <p><em>Store leftover pizza in the fridge for up to three days. Reheat pizza in a sturdy skillet over medium heat with a drizzle of oil. Cover skillet with a lid and cook until the cheese has melted and crust is crispy.</em></p>
-        <a href="../index.html">Go back</a>
+        <a class="go-back-button" href="../index.html">Go back</a>
 
         <p>For the full article, visit <a href="https://www.simplyrecipes.com/recipes/homemade_pepperoni_pizza/">This link</a>.</p>
     </body>
